# EDM4hep_TimesliceGenerator

./: .gitignore  ARCHITECTURAL_REFACTORING.md  ARCHITECTURE_DIAGRAM.md  BEFORE_AFTER_COMPARISON.txt  BRANCH_TYPE_REGISTRY_REFACTORING.md  CMakeLists.txt  CMakeLists_standalone.txt  COLLECTION_ZIPPING.md  COMPARISON.md  COMPLETION_SUMMARY.txt  ENHANCED_FEATURES.md  FINAL_SUMMARY.md  GENERIC_OFFSET_APPLICATION.md  GENERIC_PROCESSING.md  HANDLER_BASED_DISPATCH.md  HEPMC3_MERGER.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_PODIO_INTEGRATION.md  INVESTIGATION_INDEX.md  INVESTIGATION_PODIO_APPROACH.md  INVESTIGATION_PRACTICAL_EXAMPLES.md  INVESTIGATION_PRECOMPILER_MACROS.md  INVESTIGATION_SUMMARY.md  INVESTIGATION_VISUAL_GUIDE.md  MACRO_SYSTEM_README.md  PR_SUMMARY.md  README.md  README_EDM4HEP.md  README_Standalone.md  README_TimesliceMerger.md  REFACTORING_AUTOMATIC_DISCOVERY.md  REFACTORING_EVENT_DATA_MAP.md  REFACTORING_INDEX_OFFSETS.md  REFACTORING_METADATA_DRIVEN.md  REFACTORING_OBJECT_ORIENTED.md  REFACTORING_SUMMARY.md  RELATIONSHIP_DISCOVERY.md  RUNTIME_DISCOVERY.md  SIMPLIFICATION_APPROACH.md  SIMPLIFICATION_COMPLETE.md  (+23 more)
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: copilot-setup-steps.yml
.github/scripts/: generate_memory_report.sh  monitor_memory.sh
.github/workflows/: ci.yml  linux-eic-shell.yml
configs/: config.yml  config_ci.yml  config_continue.yml  config_epic_10x275.yml  config_epic_18x275.yml  config_epic_5x100.yml  config_hepmc3.yml  hepmc3_config.yml  hepmc3_epic_example.yml
examples/: README.md  index_offset_example.cc  test_branch_name_macros.cc
include/: BranchRelationshipMapper.h  BranchTypeRegistry.h  CollectionMergeHandler.h  CollectionMetadata.h  CollectionProcessor.h  CollectionRegistry.h  CollectionTabulators.h  CollectionTabulatorsEDM4HEP.h  CollectionTypeTraits.h  CommandLineParser.h  DataHandler.h  DataSource.h  EDM4hepBranchNames.h  EDM4hepDataHandler.h  EDM4hepDataSource.h  EDM4hepOutputHandler.h  HepMC3DataHandler.h  HepMC3DataSource.h  HepMC3OutputHandler.h  HepMC3TimesliceMerger.h  IndexOffsetHelper.h  MergerConfig.h  MutableRootReader.h  MyClusterFactory.h  MyClusterFactoryEDM4HEP.h  MyEventFileReader.h  MyEventFileReaderGenerator.h  MyEventFileWriter.h  MyEventGenerator.h  MyEventGeneratorGenerator.h  MyFileReader.h  MyFileReaderEDM4HEP.h  MyFileReaderGeneratorEDM4HEP.h  MyFileWriter.h  MyFileWriterEDM4HEP.h  MyProtoclusterFactory.h  MyProtoclusterFactoryEDM4HEP.h  MyTimesliceBuilder.h  MyTimesliceBuilderConfig.h  MyTimesliceBuilderEDM4HEP.h  (+16 more)
jana_plugin/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  JEventSourceTimeframeBuilderEDM4hep.cc  JEventSourceTimeframeBuilderEDM4hep.h  JEventSourceTimeframeBuilderHepMC3.cc  JEventSourceTimeframeBuilderHepMC3.h  README.md  test_jana_plugin.sh  timeframe_builder_plugin.cc
src/: BranchRelationshipMapper.cc  BranchTypeRegistry.cc  CollectionMergeHandler.cc  CollectionProcessor.cc  CollectionRegistry.cc  CollectionTabulators.cc  CollectionTabulatorsEDM4HEP.cc  CommandLineParser.cc  DataHandler.cc  DataSource.cc  EDM4HEPTimesliceExample.cc  EDM4hepDataHandler.cc  EDM4hepDataSource.cc  EDM4hepOutputHandler.cc  HepMC3DataHandler.cc  HepMC3DataSource.cc  HepMC3OutputHandler.cc  HepMC3TimesliceMerger.cc  MutableRootReader.cc  OutputHandler.cc  PodioCollectionZipReader.cc  PodioFrameZipperDataHandler.cc  SourceReader.cc  StandaloneTimesliceMerger.cc  StandaloneTimesliceMerger_root_backup.cc  TimeframeBuilder.cc  TimesliceCreator.cc  TimesliceMerger.cc  TimesliceMergerBase.cc  hepmc3_merger_main.cc  mock_test.cc  test_file_format.cc  test_podio_format.cc  test_standalone.cc  test_zip_reader.cc  timeframe_builder_main.cc  timeslice_merger_main.cc
tests/: basic_test.cpp
